# fiveSon

./: .gitignore  README.md  policy_heuristic.py  pyproject.toml  system_report.md
arena/: __init__.py  matchmaker.py
backend/: app.py
backend/api/: routes.py  ws.py
backend/core/: runtime.py  settings.py
backend/services/: __init__.py  game_service.py  training_bridge.py
configs/: default.yaml
docs/: ARCHITECTURE.md
engine/: board.py
evaluation/: elo.py
fiveson.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/static/: app.js  style.css
frontend/templates/: index.html
mcts/: __init__.py  tree.py
network/: __init__.py  model.py
replay_buffer/: __init__.py  prioritized.py
scripts/: backend_guard.py  generate_system_report.py  run_backend.py  run_orchestrator.py
self_play/: __init__.py  process_worker.py  worker.py
tests/: test_board.py  test_checkpoint_restore.py  test_replay_buffer.py  test_status_api.py  test_training_bridge.py
tools/: system_probe.py
training/: orchestrator.py  trainer.py
